--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
                 <li>
                     <a class="nav-link" asp-controller="Home" asp-action="RestaurantList">List of user-suggested restauarants</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Home" asp-action="UserSuggestions">Add a Suggestion</a>
+                <li>
+                    <a class="nav-link" asp-controller="Home" asp-action="RestaurantSuggestions">Add a Suggestion</a>
                 </li>
             </ul>
         </div>
