--- a/Views/Home/RestaurantList.cshtml
+++ b/Views/Home/RestaurantList.cshtml
@@ -4,9 +4,9 @@
 
 @model IEnumerable<TopRestaurantsProvo.Models.Suggestion>
 
-<div>
+<div class="container">
     <table class="table">
-        <thead>
+        <thead class="justify-content-center">
             <tr>
                 <th scope="col">Name</th>
                 <th scope="col">Restaurant Name</th>
