--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -7,6 +7,10 @@ a.navbar-brand {
   word-break: break-all;
 }
 
+.formBox {
+    background-color: red;
+}
+
 /* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
